This file contains information about the changes done to
ODR-DabMux in this repository

upcoming:
	Make compatible with easydab again
	Remove odr-zmq2edi

2024-05-05: Matthias P. Braendli <matthias@mpb.li>
	(v4.5.0):
		Switch project to C++17.
		Update common code, with ClockTAI improvements among others.
		Add uatype journaline to config.
		Add ZMQ output to odr-zmq2edi.
		Increase repetition rate for labels.
		Add showjson to remote control.

2024-03-23: Matthias P. Braendli <matthias@mpb.li>
	(v2.3.2):
		This is a patch version for v2.3.1
		Fix compilation issues with recent boost and compiler versions

2023-08-12: Matthias P. Braendli <matthias@mpb.li>
	(v4.4.1):
		Fix some compilation issues.

2023-05-09: Matthias P. Braendli <matthias@mpb.li>
	(v4.4.0):
		Ensure CIF count continuity on startup, and make CIF
		count consistent with timestamp across restarts.
		Ensure EDI output inserts ESTn tags in the order given
		in the config file.

2022-10-18: Matthias P. Braendli <matthias@mpb.li>
	(v4.3.0):
		Add "load_entire_file" configuration setting for file inputs.
		Add EDI/TCP output pre-roll burst to reduce downtime on new connections.
		Support reading the mux config in JSON format.
		Fix a 32-bit SId parse issue on 32-bit systems.
		Improve installation instructions in INSTALL.md.

2022-04-19: Matthias P. Braendli <matthias@mpb.li>
	(v4.2.1):
		Fix `make dist`

2022-04-19: Matthias P. Braendli <matthias@mpb.li>
	(v4.2.0):
		Add FIG 0/14 FEC scheme defintion, for enhancedpacket mode subchannels.
		Remove useless List Terminator for FIG0/13, and add support for Broadcast WebSite.
		Add timestamps to log output.
		Update manpages.

2022-03-15: Matthias P. Braendli <matthias@mpb.li>
	(v4.1.0):
		Improve EDI input.
		Fix crash when FIG0/7 doesn't have enough space.
		Fix FIG0/6 (service linking) database continuation flag.
		Simplify compilation on ARM.
		Rework web GUI (Thanks to Robin)

2021-06-03: Matthias P. Braendli <matthias@mpb.li>
	(v4.0.0):