@@ -39,7 +39,7 @@ struct frame_timestamp_t {
     uint32_t utco = 0;
     uint32_t tsta = 0xFFFFFF; // According to EN 300 797 Annex B
 
-    bool valid() const;
+    bool is_valid() const;
     std::string to_string() const;
     std::time_t to_unix_epoch() const;
     std::chrono::system_clock::time_point to_system_clock() const;
